--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -1,4 +1,8 @@
 <form action="<%= @cat.persisted? ? cat_url(@cat) : cats_url %>" method="post">
+  <input type="hidden"
+         name="authenticity_token"
+         value="<%= form_authenticity_token %>">
+  
   <input type="hidden" name="_method" value="<%= @cat.persisted? ? "PATCH" : "POST" %>">
   <table>
       <tr>
