--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+<% unless current_user.nil? %>
+  <%= current_user.user_name %><br>
+  <%= button_to "Click to logout", session_url, method: :delete %>
+<% else %>
+  <%= button_to "Click to sign in", new_session_url, method: :get %>
+<% end %>
+<h1><%= flash[:errors] %></h1>
 <%= yield %>
 
 </body>
